force-app/main/default/objects/Posting__c/Posting__c.object-meta.xml
<CustomObject>
    <description>Juction Object</description>
    <label>Posting</label>
    <nameField>
        <label>Posting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>