force-app/main/default/objects/Posting__c/fields/Job_Post__c.field-meta.xml
<CustomField>
    <fullName>Job_Post__c</fullName>
    <label>Job Post</label>
    <referenceTo>Job_Post__c</referenceTo>
    <relationshipLabel>Postings</relationshipLabel>
    <relationshipName>Postings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>