force-app/main/default/objects/Posting__c/fields/Job_Site__c.field-meta.xml
<CustomField>
    <fullName>Job_Site__c</fullName>
    <label>Job Site</label>
    <referenceTo>Job_Site__c</referenceTo>
    <relationshipLabel>Postings</relationshipLabel>
    <relationshipName>Postings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>